product_docs/docs/mongo_data_adapter/5.2/05_updating_the_mongo_data_adapter.mdx
---
title: "Updating the MongoDB Foreign Data Wrapper"
---

<div id="updating_the_mongo_data_adapter" class="registered_link"></div>

## Updating an RPM Installation

If you have an existing RPM installation of MongoDB Foreign Data Wrapper, you can use yum or dnf to upgrade your repository configuration file and update to a more recent product version. To update the `edb.repo` file, assume superuser privileges and enter:

-   On RHEL or CentOS 7:

     `yum upgrade edb-repo`

-   On RHEL or CentOS 7 on PPCLE:

     `yum upgrade edb-repo`

-   On RHEL or Rocky Linux or AlmaLinux 8:

     `dnf upgrade edb-repo`

yum or dnf will update the `edb.repo` file to enable access to the current EDB repository, configured to connect with the credentials specified in your `edb.repo` file. Then, you can use yum or dnf to upgrade any installed packages:

-   On RHEL or CentOS 7:

     `yum upgrade edb-as<xx>-mongo_fdw edb-libmongoc-libs`

-   On RHEL or CentOS 7 on PPCLE:

     `yum upgrade edb-as<xx>-mongo_fdw edb-libmongoc-libs`

-   On RHEL or Rocky Linux or AlmaLinux 8:

     `dnf upgrade edb-as<xx>-mongo_fdw`

    where `xx` is the server version number.

## Updating MongoDB Foreign Data Wrapper on a Debian or Ubuntu Host

To update MongoDB Foreign Data Wrapper on a Debian or Ubuntu Host, use the following command:

 `apt-get --only-upgrade install edb-as<xx>-mongo-fdw edb-libmongoc`

 where `xx` is the server version number.
